--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ include "peopleapi-challenge-hs.fullname" . }}-db 
+    app: {{ include "peopleapi-challenge-hs.fullname" . }} 
