--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -7,9 +7,10 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
+    - name: http
+      port: {{ .Values.service.port }}
       targetPort: 8080
-      protocol: TCP
-      name: http
+      protocol: TCP      
   selector:
-    app: {{ include "peopleapi-challenge-hs.fullname" . }} 
+    app.kubernetes.io/instance: {{ include "peopleapi-challenge-hs.fullname" . }}
+    app.kubernetes.io/name: {{ include "peopleapi-challenge-hs.fullname" . }} 
